Se crea calculadora, nuevo elemento en el menú y página efren

--- a/gateway/src/main/webapp/i18n/en/global.json
+++ b/gateway/src/main/webapp/i18n/en/global.json
@@ -10,7 +10,8 @@
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
         "mascotamsMascota": "Mascota",
         "alimentomsAlimento": "Alimento",
-        "task": "Task"
+        "task": "Task",
+        "efren": "Efren"
 
       },
       "account": {
