--- a/gateway/src/main/webapp/i18n/es/global.json
+++ b/gateway/src/main/webapp/i18n/es/global.json
@@ -10,7 +10,8 @@
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)",
         "mascotamsMascota": "Mascota",
         "alimentomsAlimento": "Alimento",
-        "task": "Tareas"
+        "task": "Tareas",
+        "efren": "Efren"
       },
       "account": {
         "main": "Cuenta",
